[project]
name = "temperature-conversion-api"
version = "0.1.0"
description = "API for converting temperatures between Celsius and Fahrenheit."
authors = [{name = "Jack McPherson", email = "jackemcpherson@gmail.com"}]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.uv]
dev-dependencies = ["temperature-conversion-api[dev]"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
